# RustGame

./: .gitignore  Cargo.toml
src/: main.rs  model.rs
