[package]
name = "rust_game"
version = "0.1.0"
authors = ["Shachar <nihohit@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.5"
bevy_ui = "0.5"
bevy_core = "0.5"
bevy_text = "0.5"
bevy_render = "0.5"
bevy_window = "0.5"
bevy_winit = "0.5"
bevy_app = "0.5"
bevy_internal = "0.5"
bevy_sprite = "0.5"
bevy_diagnostic = "0.5"