[package]
name = "rust_game"
version = "0.1.0"
authors = ["Shachar <nihohit@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[dependencies]
bevy = "0.6"
rand = "0.8"